[gd_scene load_steps=4 format=3 uid="uid://bjrgmcetolwg5"]

[ext_resource type="FontFile" uid="uid://chtroxuj05iln" path="res://fonts/MoreSugar.otf" id="1_oa6j6"]
[ext_resource type="Script" path="res://scripts/ui/lobby/UICodeInput.gd" id="2_owwsv"]
[ext_resource type="Script" path="res://scripts/ui/lobby/UIJoinButton.gd" id="3_6face"]

[node name="Join" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -133.0
offset_right = 150.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_oa6j6")
theme_override_font_sizes/font_size = 50
placeholder_text = "Name"
alignment = 1
max_length = 6
context_menu_enabled = false

[node name="CodeInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -37.5
offset_right = 150.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_oa6j6")
theme_override_font_sizes/font_size = 50
placeholder_text = "Code"
alignment = 1
max_length = 4
context_menu_enabled = false
script = ExtResource("2_owwsv")

[node name="JoinButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 58.0
offset_right = 150.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_oa6j6")
theme_override_font_sizes/font_size = 50
text = "Join!"
script = ExtResource("3_6face")

[connection signal="text_changed" from="CodeInput" to="CodeInput" method="_on_text_changed"]
[connection signal="pressed" from="JoinButton" to="JoinButton" method="_on_pressed"]
